--- a/NeuralNetwork/5_1_NN_Foundations.ipynb
+++ b/NeuralNetwork/5_1_NN_Foundations.ipynb
@@ -4,14 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Neural Network for Purchase Propensity\n",
+    "# Neural Network - Subscribe Prediction\n",
     "\n",
-    "1. Generate **synthetic data** to simulate user behavior.\n",
-    "2. Train two models:\n",
+    "1. Train two models:\n",
     "   - **Baseline Logistic Regression** (simple, interpretable)\n",
     "   - **Neural Network (MLP)** (more complex, flexible)\n",
-    "3. Compare performance using clear metrics and visualizations.\n",
-    "4. Highlight **what leaders should focus on** in evaluation and decision‑making."
+    "2. Compare performance using clear metrics and visualizations.\n",
+    "3. Highlight **what leaders should focus on** in evaluation and decision‑making."
    ]
   },
   {
@@ -20,8 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setup\n",
-    "import numpy as np, pandas as pd\n",
+    "import pandas as pd\n",
     "from numpy.random import default_rng\n",
     "import matplotlib.pyplot as plt, warnings\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -32,17 +30,51 @@
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.metrics import roc_auc_score, average_precision_score, brier_score_loss, roc_curve, precision_recall_curve\n",
     "from sklearn.calibration import calibration_curve\n",
+    "from scipy.io import arff\n",
     "\n",
     "rng = default_rng(0)\n",
-    "warnings.filterwarnings(\"ignore\")\n"
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate synthetic data\n",
-    "We simulate visitor behavior (sessions, pages, cart actions, channel, device, etc.) and whether they purchase in the next 48h (binary target)."
+    "## Dataset Description\n",
+    "- Author: Paulo Cortez, Sérgio Moro \n",
+    "- Source: UCI \n",
+    "- Cite: S. Moro, R. Laureano and P. Cortez. Using Data Mining for Bank Direct Marketing: An Application of the CRISP-DM Methodology. In P. Novais et al. (Eds.), Proceedings of the European Simulation and Modelling Conference - ESM'2011, pp. 117-121, Guimarães, Portugal, October, 2011. EUROSIS.\n",
+    "\n",
+    "### Background\n",
+    "The data is related with direct marketing campaigns of a Portuguese banking institution. The marketing campaigns were based on phone calls. Often, more than one contact to the same client was required, in order to access if the product (bank term deposit) would be (or not) subscribed.\n",
+    "\n",
+    "The classification goal is to predict if the client will subscribe a term deposit (variable y).\n",
+    "\n",
+    "### Features:\n",
+    "**bank client data:**\n",
+    "- age (numeric)\n",
+    "- job : type of job (categorical: \"admin.\",\"unknown\",\"unemployed\",\"management\",\"housemaid\",\"entrepreneur\", \"student\",\"blue-collar\",\"self-employed\",\"retired\",\"technician\",\"services\")\n",
+    "- marital : marital status (categorical: \"married\",\"divorced\",\"single\"; note: \"divorced\" means divorced or widowed)\n",
+    "- education (categorical: \"unknown\",\"secondary\",\"primary\",\"tertiary\")\n",
+    "- default: has credit in default? (binary: \"yes\",\"no\")\n",
+    "- balance: average yearly balance, in euros (numeric)\n",
+    "- housing: has housing loan? (binary: \"yes\",\"no\")\n",
+    "- loan: has personal loan? (binary: \"yes\",\"no\")\n",
+    "\n",
+    "**related with the last contact of the current campaign:**\n",
+    "- contact: contact communication type (categorical: \"unknown\",\"telephone\",\"cellular\")\n",
+    "- day: last contact day of the month (numeric)\n",
+    "- month: last contact month of year (categorical: \"jan\", \"feb\", \"mar\", ..., \"nov\", \"dec\")\n",
+    "- duration: last contact duration, in seconds (numeric)\n",
+    "\n",
+    "**other attributes:**\n",
+    "- campaign: number of contacts performed during this campaign and for this client (numeric, includes last contact)\n",
+    "- pdays: number of days that passed by after the client was last contacted from a previous campaign (numeric, -1 means client was not previously contacted)\n",
+    "- previous: number of contacts performed before this campaign and for this client (numeric)\n",
+    "- poutcome: outcome of the previous marketing campaign (categorical: \"unknown\",\"other\",\"failure\",\"success\")\n",
+    "\n",
+    "**output variable (desired target):**\n",
+    "- y - has the client subscribed a term deposit? (binary: \"yes\",\"no\")"
    ]
   },
   {
@@ -51,29 +83,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 1000\n",
-    "sessions = rng.poisson(2, N)\n",
-    "pages = rng.poisson(5, N)\n",
-    "cart_adds = rng.poisson(0.3*sessions)\n",
-    "device = rng.choice(['mobile','desktop'], N, p=[0.7,0.3])\n",
-    "country = rng.choice(['US','CA','GB'], N, p=[0.7,0.2,0.1])\n",
-    "channel = rng.choice(['direct','search','social','email'], N)\n",
+    "# Load Dataset\n",
+    "file_path = \"https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/NeuralNetwork/phpkIxskf.arff\"\n",
+    "data, meta = arff.loadarff(file_path)\n",
+    "df = pd.DataFrame(data)\n",
+    "# Rename columns\n",
+    "col_map = {\n",
+    "    \"V1\": \"age\",\n",
+    "    \"V2\": \"job\",\n",
+    "    \"V3\": \"marital\",\n",
+    "    \"V4\": \"education\",\n",
+    "    \"V5\": \"default\",\n",
+    "    \"V6\": \"balance\",\n",
+    "    \"V7\": \"housing\",\n",
+    "    \"V8\": \"loan\",\n",
+    "    \"V9\": \"contact\",\n",
+    "    \"V10\": \"day\",\n",
+    "    \"V11\": \"month\",\n",
+    "    \"V12\": \"duration\",\n",
+    "    \"V13\": \"campaign\",\n",
+    "    \"V14\": \"pdays\",\n",
+    "    \"V15\": \"previous\",\n",
+    "    \"V16\": \"poutcome\",\n",
+    "    \"Class\": \"subscribed\"\n",
+    "}\n",
     "\n",
-    "# Latent score for purchase probability\n",
-    "x = -3 + 0.2*pages + 0.4*cart_adds + (channel=='email')*0.5 + (device=='desktop')*0.2\n",
-    "p = 1/(1+np.exp(-x))\n",
-    "y = rng.binomial(1, p)\n",
+    "df = df.rename(columns=col_map)\n",
     "\n",
-    "df = pd.DataFrame({\n",
-    "    'sessions': sessions,\n",
-    "    'pages': pages,\n",
-    "    'cart_adds': cart_adds,\n",
-    "    'device': device,\n",
-    "    'country': country,\n",
-    "    'channel': channel,\n",
-    "    'purchase_next_48h': y\n",
-    "})\n",
-    "df.head()"
+    "# Convert data types\n",
+    "def decode_bytes(val):\n",
+    "    if isinstance(val, (bytes, bytearray)):\n",
+    "        try:\n",
+    "            return val.decode('utf-8')  # decode to string\n",
+    "        except:\n",
+    "            return str(val)  # fallback to str\n",
+    "    if isinstance(val, str) and val.startswith(\"b'\"):  # string that looks like b'...'\n",
+    "        return val.strip(\"b'\").strip(\"'\")\n",
+    "    return val\n",
+    "\n",
+    "df = df.applymap(decode_bytes)\n",
+    "\n",
+    "# Ensure numeric columns are numeric\n",
+    "num_cols = [\"age\",\"balance\",\"day\",\"duration\",\"campaign\",\"pdays\",\"previous\"]\n",
+    "df[num_cols] = df[num_cols].apply(pd.to_numeric, errors='coerce')\n",
+    "\n",
+    "# Convert target (binary)\n",
+    "df[\"subscribed\"] = df[\"subscribed\"].replace({\"1\": 1, \"2\": 0})\n",
+    "\n",
+    "print(df.head())"
    ]
   },
   {
@@ -81,7 +138,7 @@
    "metadata": {},
    "source": [
     "## Train/Test split\n",
-    "We hold out 20% of data for final evaluation."
+    "Hold out 20% of data for final evaluation."
    ]
   },
   {
@@ -90,12 +147,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df.drop(columns=['purchase_next_48h'])\n",
-    "y = df['purchase_next_48h']\n",
+    "X = df.drop(columns=['subscribed'])\n",
+    "y = df['subscribed']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0, stratify=y)\n",
     "\n",
-    "num_cols = ['sessions','pages','cart_adds']\n",
-    "cat_cols = ['device','country','channel']\n",
+    "num_cols = ['age','balance','day', 'duration', 'campaign', 'pdays', 'previous']\n",
+    "cat_cols = ['job', 'marital', 'education', 'default', 'housing', 'loan', 'contact', 'month', 'poutcome']\n",
     "\n",
     "pre = ColumnTransformer([\n",
     "    ('num', StandardScaler(), num_cols),\n",
@@ -119,7 +176,7 @@
    "source": [
     "logreg = Pipeline([\n",
     "    ('pre', pre),\n",
-    "    ('clf', LogisticRegression(max_iter=300))\n",
+    "    ('clf', LogisticRegression(max_iter=3000))\n",
     "])\n",
     "logreg.fit(X_train, y_train)\n",
     "probs_lr = logreg.predict_proba(X_test)[:,1]\n",
@@ -155,17 +212,7 @@
    "source": [
     "mlp = Pipeline([\n",
     "    ('pre', pre),\n",
-    "    ('clf', MLPClassifier(\n",
-    "        hidden_layer_sizes=(64, 32, 16),   # 3 layers, more expressive\n",
-    "        activation='relu',                 # modern default\n",
-    "        solver='adam',                     # adaptive optimizer\n",
-    "        alpha=0.1,                         # L2 regularization\n",
-    "        learning_rate='adaptive',          # slows down as it converges\n",
-    "        max_iter=3000,                     # allow more epochs\n",
-    "        early_stopping=True,               # stops if no val improvement\n",
-    "        n_iter_no_change=50,               # patience for early stopping\n",
-    "        random_state=0\n",
-    "    ))\n",
+    "    ('clf', MLPClassifier(hidden_layer_sizes=(16, 8)))\n",
     "])\n",
     "mlp.fit(X_train, y_train)\n",
     "probs_nn = mlp.predict_proba(X_test)[:,1]\n",
@@ -187,7 +234,7 @@
     "# Training Loss curve\n",
     "clf = mlp.named_steps[\"clf\"]\n",
     "plt.figure(figsize=(6,4))\n",
-    "plt.plot(clf.loss_curve_, marker=\"o\")\n",
+    "plt.plot(clf.loss_curve_)\n",
     "plt.xlabel(\"epoch\"); plt.ylabel(\"loss\")\n",
     "plt.title(\"MLP training loss curve\")\n",
     "plt.tight_layout(); plt.show()"
@@ -209,21 +256,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = pd.DataFrame({\n",
-    "    \"Logistic Regression\": {\n",
-    "        \"ROC-AUC (higher=better)\": auc_lr,\n",
-    "        \"PR-AUC (higher=better)\": pr_lr,\n",
-    "        \"Brier (lower=better)\": brier_lr\n",
-    "    },\n",
-    "    \"Neural Net\": {\n",
-    "        \"ROC-AUC (higher=better)\": auc_nn,\n",
-    "        \"PR-AUC (higher=better)\": pr_nn,\n",
-    "        \"Brier (lower=better)\": brier_nn\n",
-    "    }\n",
-    "})\n",
-    "\n",
-    "display(results.T.round(3))\n",
-    "\n",
     "# ROC curves\n",
     "fpr_lr, tpr_lr, _ = roc_curve(y_test, probs_lr)\n",
     "fpr_nn, tpr_nn, _ = roc_curve(y_test, probs_nn)\n",
@@ -263,7 +295,22 @@
     "plt.ylabel(\"Observed frequency\")\n",
     "plt.title(\"Calibration\")\n",
     "plt.legend()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "results = pd.DataFrame({\n",
+    "    \"Logistic Regression\": {\n",
+    "        \"ROC-AUC (higher=better)\": auc_lr,\n",
+    "        \"PR-AUC (higher=better)\": pr_lr,\n",
+    "        \"Brier (lower=better)\": brier_lr\n",
+    "    },\n",
+    "    \"Neural Net\": {\n",
+    "        \"ROC-AUC (higher=better)\": auc_nn,\n",
+    "        \"PR-AUC (higher=better)\": pr_nn,\n",
+    "        \"Brier (lower=better)\": brier_nn\n",
+    "    }\n",
+    "})\n",
+    "\n",
+    "display(results.T.round(3))"
    ]
   },
   {
