nn_load_data_fix

--- a/NeuralNetwork/5_1_NN_Foundations.ipynb
+++ b/NeuralNetwork/5_1_NN_Foundations.ipynb
@@ -84,8 +84,9 @@
    "outputs": [],
    "source": [
     "# Load Dataset\n",
-    "file_path = \"https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/NeuralNetwork/phpkIxskf.arff\"\n",
-    "data, meta = arff.loadarff(file_path)\n",
+    "!wget -q https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/NeuralNetwork/phpkIxskf.arff\n",
+    "file_name = \"phpkIxskf.arff\"\n",
+    "data, meta = arff.loadarff(file_name)\n",
     "df = pd.DataFrame(data)\n",
     "# Rename columns\n",
     "col_map = {\n",
