--- a/NeuralNetwork/5_4_HAR_RNN_LSTM_GRU_Comparison.ipynb
+++ b/NeuralNetwork/5_4_HAR_RNN_LSTM_GRU_Comparison.ipynb
@@ -371,7 +371,7 @@
     "# Add MLP results too\n",
     "results.append({\"model\": \"MLP\", \"test_acc\": float(mlp_test_acc), \"params\": mlp.count_params()})\n",
     "res_df = pd.DataFrame(results).sort_values(\"test_acc\", ascending=False).reset_index(drop=True)\n",
-    "res_df"
+    "display(res_df)"
    ]
   },
   {
