--- a/NeuralNetwork/5_5_HAR_LSTM_vs_Transformer.ipynb
+++ b/NeuralNetwork/5_5_HAR_LSTM_vs_Transformer.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "383c16bd",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
     "from pathlib import Path\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt, warnings\n",
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
@@ -57,6 +57,7 @@
     "\n",
     "np.random.seed(7)\n",
     "tf.random.set_seed(7)\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "print(\"Python:\", sys.version.split()[0])\n",
     "print(\"TensorFlow:\", tf.__version__)\n",
