--- a/Reinforcement_learning/taxi_q_learning.ipynb
+++ b/Reinforcement_learning/taxi_q_learning.ipynb
@@ -208,13 +208,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.13.7)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.12.7"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
