prompting_pattern_update

--- a/LLM1/6_1_Prompting_ZeroFewShot_CoT_Gemini.ipynb
+++ b/LLM1/6_1_Prompting_ZeroFewShot_CoT_Gemini.ipynb
@@ -7,15 +7,30 @@
    "source": [
     "\n",
     "# Zero‑Shot, Few‑Shot, and CoT Prompting with Guardrails (Gemini API)\n",
-    "**Updated:** 2025-09-07 20:41\n",
     "\n",
-    "This notebook shows:\n",
     "- Zero‑shot, few‑shot, and chain‑of‑thought (CoT) prompting with **Gemini Pro**.\n",
     "- A **Marketing** scenario that outputs a JSON recommendation object.\n",
     "- **Guardrails**: knowledge boundary, refusal rules, and JSON schema validation.\n",
     "- **Self‑consistency** sampling and a minimal **evaluation** harness.\n",
     "\n",
-    "> Set your `GOOGLE_API_KEY` (from Google AI Studio) in the setup cell.\n"
+    "> Set your `GOOGLE_API_KEY` (from Google AI Studio) in `Secrets` tab."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "151d26fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import userdata\n",
+    "try:\n",
+    "    import google.generativeai as genai\n",
+    "    genai.configure(api_key=userdata.get('GOOGLE_API_KEY'))\n",
+    "    _GEMINI_READY = bool(userdata.get('GOOGLE_API_KEY'))\n",
+    "except Exception:\n",
+    "    print(\"Install google-generativeai to enable live calls.\")\n",
+    "    _GEMINI_READY = False"
    ]
   },
   {
@@ -25,20 +40,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from google.colab import userdata\n",
     "import json, textwrap, random\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from typing import Any, Dict, Tuple, List, Optional\n",
     "from jsonschema import Draft202012Validator, ValidationError\n",
-    "\n",
-    "try:\n",
-    "    import google.generativeai as genai\n",
-    "    genai.configure(api_key=userdata.get('GOOGLE_API_KEY'))\n",
-    "    _GEMINI_READY = bool(userdata.get('GOOGLE_API_KEY'))\n",
-    "except Exception:\n",
-    "    print(\"Install google-generativeai to enable live calls.\")\n",
-    "    _GEMINI_READY = False\n",
     "\n",
     "MODEL_NAME = \"gemini-2.5-flash\"\n",
     "\n",
