llm_prompting_patterns

--- a/LLM1/6_1_Prompting_ZeroFewShot_CoT_Gemini.ipynb
+++ b/LLM1/6_1_Prompting_ZeroFewShot_CoT_Gemini.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "# Zero‑Shot, Few‑Shot, and CoT Prompting with Guardrails (Gemini API)\n",
     "\n",
-    "- Zero‑shot, few‑shot, and chain‑of‑thought (CoT) prompting with **Gemini Pro**.\n",
+    "- Zero‑shot, few‑shot, and chain‑of‑thought (CoT) prompting with **Gemini API**.\n",
     "- A **Marketing** scenario that outputs a JSON recommendation object.\n",
     "- **Guardrails**: knowledge boundary, refusal rules, and JSON schema validation.\n",
     "- **Self‑consistency** sampling and a minimal **evaluation** harness.\n",
