linear_regression_mardown_edits

--- a/Regression_Forecasting/2_1_LinearRegression.ipynb
+++ b/Regression_Forecasting/2_1_LinearRegression.ipynb
@@ -2,13 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "29b376c6",
+   "id": "2649c469",
    "metadata": {},
    "source": [
-    "# Linear Regression\n",
+    "# Linear Regression for Marketing Revenue Forecasting\n",
     "\n",
-    "**Scenario (Marketing)**: Predict daily revenue from ad spend, promotions, price index, weather, and weekend effects for a digital storefront.\n",
-    "We will fit a baseline linear regression, evaluate with time-based split, and visualize predictions."
+    "This notebook demonstrates how to build and evaluate a baseline linear regression model to predict daily revenue for a digital storefront using marketing and contextual features. The workflow includes:\n",
+    "\n",
+    "- **Data Loading:** Imports daily marketing and weather data, sorted by date.\n",
+    "- **Time-Aware Train/Test Split:** Reserves the last 90 days as a test set to simulate real-world forecasting.\n",
+    "- **Feature Engineering:** Selects relevant numeric and categorical predictors (ad spend, promotions, price index, weather, weekend).\n",
+    "- **Preprocessing & Modeling:** Uses a pipeline with standard scaling for numeric features and one-hot encoding for categoricals, followed by linear regression.\n",
+    "- **Evaluation:** Computes RMSE, MAE, and $R^2$ on the test set and visualizes actual vs. predicted revenue.\n",
+    "- **Interpretation:** Displays standardized model coefficients for plain-language sense-checking of feature influence."
    ]
   },
   {
