--- a/LLM1/6_5_RAG_Policy_Assistant_Gemini.ipynb
+++ b/LLM1/6_5_RAG_Policy_Assistant_Gemini.ipynb
@@ -7,7 +7,6 @@
    "source": [
     "\n",
     "# Retrieval‑Augmented Generation (RAG) — Policy Assistant (Gemini 2.5 Flash Lite)\n",
-    "*Generated: 2025-09-12 03:19*\n",
     "\n",
     "**Scenario:** A policy assistant answers employee questions using HR policies, benefits PDFs, and recent announcement emails.  \n",
     "**Goal:** Short, grounded answers with exact citations and a structured JSON for audit — or **abstain** when sources don’t suffice.\n"
@@ -19,7 +18,6 @@
    "metadata": {},
    "source": [
     "\n",
-    "## What you’ll practice\n",
     "- Ingesting documents with metadata (source, date, owner, **ACL**)\n",
     "- Chunking & indexing; **BM25**, simple **semantic** cosine; **Hybrid** + **MMR** diversity\n",
     "- Building a strict, source-bound prompt that **requires citations** and allows abstention\n",
@@ -38,19 +36,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6bf0e1e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from google.colab import userdata\n",
-    "# try:\n",
-    "#     import google.generativeai as genai\n",
-    "#     genai.configure(api_key=userdata.get('GOOGLE_API_KEY'))\n",
-    "#     _GEMINI_READY = bool(userdata.get('GOOGLE_API_KEY'))\n",
-    "# except Exception:\n",
-    "#     print(\"Install google-generativeai to enable live calls.\")\n",
-    "#     _GEMINI_READY = False"
+    "from google.colab import userdata\n",
+    "try:\n",
+    "    import google.generativeai as genai\n",
+    "    genai.configure(api_key=userdata.get('GOOGLE_API_KEY'))\n",
+    "    _GEMINI_READY = bool(userdata.get('GOOGLE_API_KEY'))\n",
+    "except Exception:\n",
+    "    print(\"Install google-generativeai to enable live calls.\")\n",
+    "    _GEMINI_READY = False"
    ]
   },
   {
@@ -58,43 +56,18 @@
    "execution_count": null,
    "id": "09cc8e9f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GOOGLE_API_KEY detected. Model: gemini-2.5-flash-lite\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/xtra-moon2472/PythonProjects/Git/ust-mail/.venv/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, re, math, time, json\n",
     "from datetime import datetime\n",
     "from collections import defaultdict, Counter\n",
     "\n",
-    "API_KEY = 'AIzaSyB-FeoiQetj_stzMVqHnBOITqw8_mYe2pc'\n",
     "MODEL_NAME = os.getenv(\"GEMINI_MODEL\", \"gemini-2.5-flash-lite\")\n",
     "\n",
-    "if not API_KEY:\n",
+    "if not _GEMINI_READY:\n",
     "    print(\"WARNING: GOOGLE_API_KEY is not set. Set it before running LLM cells.\")\n",
     "else:\n",
-    "    print(\"GOOGLE_API_KEY detected. Model:\", MODEL_NAME)\n",
-    "\n",
-    "try:\n",
-    "    import google.generativeai as genai\n",
-    "    genai.configure(api_key=API_KEY)\n",
-    "    _sdk_ok = True\n",
-    "except Exception as e:\n",
-    "    print(\"SDK import/configure error:\", e)\n",
-    "    _sdk_ok = False"
+    "    print(\"GOOGLE_API_KEY detected. Model:\", MODEL_NAME)"
    ]
   },
   {
@@ -111,18 +84,7 @@
    "execution_count": null,
    "id": "474b8427",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "CORPUS = [\n",
     "    {\"doc_id\":\"HR-Handbook-2025.pdf\",\"source_type\":\"pdf\",\"date\":\"2025-06-15\",\"owner\":\"HR\",\n",
@@ -417,7 +379,7 @@
    "outputs": [],
    "source": [
     "def call_gemini_json(prompt):\n",
-    "    if not (API_KEY and _sdk_ok):\n",
+    "    if not _GEMINI_READY:\n",
     "        raise RuntimeError(\"GOOGLE_API_KEY not configured or SDK not available.\")\n",
     "    model = genai.GenerativeModel(MODEL_NAME)\n",
     "    t0 = time.time()\n",
@@ -506,24 +468,7 @@
    "execution_count": null,
    "id": "c46ab902",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Preview citations: [{'doc_id': 'HR-Handbook-2025.pdf', 'page': '12'}, {'doc_id': 'Announcement-Email-2025-08-05', 'section': 'body'}]\n",
-      "Preview answer: Parental leave for primary caregivers is 16 weeks paid. ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/pf/4wxgq9pj4mb9_08rdhw3v5vr0000gq/T/ipykernel_95621/3843804777.py:31: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
-      "  \"ts\": datetime.utcnow().isoformat()+\"Z\",\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "EVAL_SET = [\n",
     "    {\"id\":\"e1\",\"q\":\"How many weeks of paid parental leave do primary caregivers get?\",\"dept\":\"all\",\"loc\":\"US\",\n",
@@ -573,7 +518,7 @@
     "    }\n",
     "    return rows, agg\n",
     "\n",
-    "if API_KEY and _sdk_ok:\n",
+    "if _GEMINI_READY:\n",
     "    preview_pred, preview_idxs, preview_latency, preview_errs = generate_answer(\"How long is parental leave for primary caregivers?\", \"all\", \"US\")\n",
     "    print(\"Preview citations:\", preview_pred.get(\"citations\"))\n",
     "    print(\"Preview answer:\", preview_pred.get(\"answer\")[:120], \"...\")\n",
@@ -594,63 +539,9 @@
    "execution_count": null,
    "id": "e88deb7e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/pf/4wxgq9pj4mb9_08rdhw3v5vr0000gq/T/ipykernel_95621/3843804777.py:31: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
-      "  \"ts\": datetime.utcnow().isoformat()+\"Z\",\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Aggregate metrics:\n",
-      "{\n",
-      "  \"grounded_rate\": 0.75,\n",
-      "  \"abstention_correct_rate\": 1.0,\n",
-      "  \"must_contain_rate\": 1.0,\n",
-      "  \"latency_p95_ms\": 920.5\n",
-      "}\n",
-      "\n",
-      "First result:\n",
-      "{\n",
-      "  \"id\": \"e1\",\n",
-      "  \"latency_ms\": 1295.1,\n",
-      "  \"grounded\": true,\n",
-      "  \"abstention_ok\": true,\n",
-      "  \"must_contain_ok\": true,\n",
-      "  \"pred\": {\n",
-      "    \"answer\": \"Primary caregivers receive 16 weeks of paid parental leave.\",\n",
-      "    \"citations\": [\n",
-      "      {\n",
-      "        \"doc_id\": \"HR-Handbook-2025.pdf\",\n",
-      "        \"page\": \"12\"\n",
-      "      },\n",
-      "      {\n",
-      "        \"doc_id\": \"Announcement-Email-2025-08-05\",\n",
-      "        \"section\": \"body\"\n",
-      "      }\n",
-      "    ],\n",
-      "    \"confidence\": \"high\",\n",
-      "    \"rationale_internal\": \"Both the HR Handbook and an announcement email state that primary caregivers receive 16 weeks of paid parental leave.\"\n",
-      "  },\n",
-      "  \"retrieved\": [\n",
-      "    \"HR-Handbook-2025.pdf:12\",\n",
-      "    \"HR-Handbook-2025.pdf:28\",\n",
-      "    \"Announcement-Email-2025-08-05:body\",\n",
-      "    \"Benefits-Site:leave\",\n",
-      "    \"HR-Handbook-2025.pdf:11\",\n",
-      "    \"Benefits-Site:health\"\n",
-      "  ]\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "if API_KEY and _sdk_ok:\n",
+    "if _GEMINI_READY:\n",
     "    rows, agg = evaluate(EVAL_SET)\n",
     "    import json\n",
     "    print(\"Aggregate metrics:\")\n",
@@ -701,94 +592,7 @@
    "execution_count": null,
    "id": "5759e016",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"ts\": \"2025-09-12T03:22:17.606912Z\",\n",
-      "  \"q\": \"How long is parental leave for primary caregivers?\",\n",
-      "  \"dept\": \"all\",\n",
-      "  \"loc\": \"US\",\n",
-      "  \"retrieved\": [\n",
-      "    \"HR-Handbook-2025.pdf:12\",\n",
-      "    \"Announcement-Email-2025-08-05:body\",\n",
-      "    \"HR-Handbook-2025.pdf:11\",\n",
-      "    \"Benefits-Site:leave\",\n",
-      "    \"Benefits-Site:health\",\n",
-      "    \"Ticket-History-1234:body\"\n",
-      "  ],\n",
-      "  \"latency_ms\": 1087,\n",
-      "  \"errors\": []\n",
-      "}\n",
-      "{\n",
-      "  \"ts\": \"2025-09-12T03:22:18.909884Z\",\n",
-      "  \"q\": \"How many weeks of paid parental leave do primary caregivers get?\",\n",
-      "  \"dept\": \"all\",\n",
-      "  \"loc\": \"US\",\n",
-      "  \"retrieved\": [\n",
-      "    \"HR-Handbook-2025.pdf:12\",\n",
-      "    \"HR-Handbook-2025.pdf:28\",\n",
-      "    \"Announcement-Email-2025-08-05:body\",\n",
-      "    \"Benefits-Site:leave\",\n",
-      "    \"HR-Handbook-2025.pdf:11\",\n",
-      "    \"Benefits-Site:health\"\n",
-      "  ],\n",
-      "  \"latency_ms\": 1295,\n",
-      "  \"errors\": []\n",
-      "}\n",
-      "{\n",
-      "  \"ts\": \"2025-09-12T03:22:19.633467Z\",\n",
-      "  \"q\": \"Do UK remote employees get extra parental leave?\",\n",
-      "  \"dept\": \"all\",\n",
-      "  \"loc\": \"UK\",\n",
-      "  \"retrieved\": [\n",
-      "    \"Announcement-Email-2025-08-05:body\",\n",
-      "    \"Benefits-Site:leave\",\n",
-      "    \"HR-Handbook-2025.pdf:11\",\n",
-      "    \"HR-Handbook-2025.pdf:28\",\n",
-      "    \"Benefits-Site:health\",\n",
-      "    \"Ticket-History-1234:body\"\n",
-      "  ],\n",
-      "  \"latency_ms\": 721,\n",
-      "  \"errors\": []\n",
-      "}\n",
-      "{\n",
-      "  \"ts\": \"2025-09-12T03:22:20.557206Z\",\n",
-      "  \"q\": \"What are the per diem rules for Canada engineering travel?\",\n",
-      "  \"dept\": \"Engineering\",\n",
-      "  \"loc\": \"CA\",\n",
-      "  \"retrieved\": [\n",
-      "    \"Policy-Wiki-Travel:per_diem\",\n",
-      "    \"HR-Handbook-2025.pdf:12\",\n",
-      "    \"Ticket-History-1234:body\",\n",
-      "    \"Benefits-Site:health\",\n",
-      "    \"HR-Handbook-2025.pdf:11\",\n",
-      "    \"Policy-Wiki-Travel:intl_travel\"\n",
-      "  ],\n",
-      "  \"latency_ms\": 920,\n",
-      "  \"errors\": []\n",
-      "}\n",
-      "{\n",
-      "  \"ts\": \"2025-09-12T03:22:21.103034Z\",\n",
-      "  \"q\": \"What is the 401(k) employer match policy?\",\n",
-      "  \"dept\": \"all\",\n",
-      "  \"loc\": \"US\",\n",
-      "  \"retrieved\": [\n",
-      "    \"HR-Handbook-2025.pdf:11\",\n",
-      "    \"Benefits-Site:health\",\n",
-      "    \"HR-Handbook-2025.pdf:28\",\n",
-      "    \"Benefits-Site:leave\",\n",
-      "    \"Ticket-History-1234:body\",\n",
-      "    \"Announcement-Email-2025-08-05:body\"\n",
-      "  ],\n",
-      "  \"latency_ms\": 543,\n",
-      "  \"errors\": []\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for row in AUDIT[-10:]:\n",
     "    import json\n",
